# AI-Uncomplicated

./: .pre-commit-config.yaml  README.md  collect_env.py  config.json  config.yaml  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
core/: fsdp_train.py  train.py
core/activations/: test_gelu.py
core/configurations/: base.py
core/dataloaders/: dataloader.py
core/english_tokenizer/: english_tokenizer.model
core/layers/: attention.py  decoder.py  layer_norm.py  norms.py  point_wise_projection.py  test_decoder.py  test_layer_norm.py  test_point_wise_projection.py
core/layers/decoder/: decoder.py
core/layers/positional_embedding/: rope_projector.py  test_rope_projector.py
core/models/: decoder.py  model.py
core/models/GI_01/: config.yaml  distributed_trainer.py  eval.py  generation.py  train.py
core/models/GI_01/main/: data_loader.py  decoder.py  model.py
core/models/GI_01/notebooks/: trainer.ipynb
core/models/GI_01/notebooks/.ipynb_checkpoints/: trainer-checkpoint.ipynb
core/models/text_to_sql/schema_linkage/: data_loader.py  models.py  train.py
core/models/text_to_sql/schema_linkage/config/: qwen_0.5b_trainer.yaml
core/models/translator/: config.py  construe.py  decoder.py  trainer.py
core/models/translator/notebooks/: trainer.ipynb
core/models/translator/tokenzier/: config.yml
core/models/translator/tokenzier/european_tokenizer/: spm_buffer.model  tokenizer.config
core/tokenizer/: __init__.py  setencepiece_to_tokenizer.py  tokenizer_loader.py  trainer.py
core/tokenizer/bpe/: trainer.py  trainer_pipeline.py
core/tokenizer/bpe/pre_trained/europian_ml/: european_tokenizer.model  european_tokenizer.vocab
core/tokenizer/bpe/utils/: symbols_utils.yml
core/trainer/: __init__.py  args.py  checkpoint.py  checkpointer.py  dataloader.py  debug.yaml  distributed.py  env.sh  float8.py  logger.py  loss.py  metrics.py  optim.py  optimizers.py  probe.py  profiling.py  schedulers.py  stool.py  tokenizer.py  train.py  transformer.py  utils.py  validator.py
core/trainer/distributed/: config.py
core/trainer/logger/: local_logger.py
core/utils/: masks.py  test_mask.py
data_processing/: downloaders.py
data_processing/parquet/: beam_text_writer.py  convertors.py  sentence_sampler.py
data_processing/terashuf/: setup.py
scripts/: download_and_prepare_pre_training_dataset.py  hf_data_downloader.py  setup_env.sh  training_script.py
study/: advance_pytorch.md  attention_mask.ipynb  dataloader_analysis.ipynb  rope_positional_encoding.ipynb  tokenizer_training_toy.ipynb  training_decoder_only.py  training_script.ipynb  transformers.ipynb
tokenizer/: english_tokenizer.vocab  tokenizer.ipynb
