[project]
name = "ai-uncomplicated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blobfile>=3.0.0",
    "datasets~=3.2.0",
    "fsspec>=2024.9.0",
    "huggingface-hub~=0.26.2",
    "lm-eval>=0.4.7",
    "matplotlib==3.9.2",
    "msgspec>=0.18.6",
    "multiprocess==0.70.16",
    "omegaconf>=2.3.0",
    "pynvml>=12.0.0",
    "pyyaml~=6.0",
    "regex~=2024.11.6",
    "requests~=2.32.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.4.3",
    "scipy>=1.14.1",
    "seaborn==0.13.2",
    "sentencepiece~=0.1.99",
    "tiktoken>=0.8.0",
    "tokenizers>=0.21.0",
    "torch>=2.5.1",
    "tqdm~=4.67.0",
    "transformers>=4.47.1",
    "viztracer>=1.0.0",
    "wandb>=0.19.1",
]

[dependency-groups]
ci = [
    "pre-commit>=4.0.1",
]
