[project]
name = "ai-uncomplicated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blobfile>=3.0.0",
    "datasets~=3.2.0",
    "datatrove>=0.4.0",
    "fsspec>=2024.9.0",
    "huggingface-hub~=0.26.2",
    "kagglehub>=0.3.6",
    "lm-eval>=0.4.7",
    "matplotlib==3.9.2",
    "msgspec>=0.18.6",
    "multiprocess==0.70.16",
    "numpy>=2.2.1",
    "omegaconf>=2.3.0",
    "orjson>=3.10.16",
    "pynvml>=12.0.0",
    "pyyaml~=6.0",
    "randomname>=0.2.1",
    "regex~=2024.11.6",
    "requests~=2.32.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.4.3",
    "scipy>=1.14.1",
    "seaborn==0.13.2",
    "sentencepiece~=0.1.99",
    "tensorflow-datasets>=4.9.7",
    "tiktoken>=0.8.0",
    "tokenizers>=0.21.0",
    "torch>=2.5.0",
    "tqdm~=4.67.0",
    "transformers>=4.47.1",
    "uv>=0.5.11",
    "viztracer>=1.0.0",
    "wandb>=0.19.1",
    "xformers>=0.0.28.post2",
]

[dependency-groups]
ci = [
    "pre-commit>=4.0.1",
]
